Fix completeOrder reference error and tighten navbar spacing

--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ body {
 }
 
 .menu-toggle {
-    margin-left: 8px;
+    margin-left: 0;
 }
 
 .navbar .cart-icon:hover {
